@@ -9,6 +9,8 @@ namespace Omegasis.Revitalize.Framework.Constants.ItemIds.Items
     public class FarmingItems
     {
         public const string AutoPlanterGardenPotAttachment = "Revitalize.Framework.World.Objects.Items.Farming.AutoPlanterGardenPotAttachment";
+            
+        public const string AutoHarvesterGardenPotAttachment = "Revitalize.Framework.World.Objects.Items.Farming.AutoHarvesterGardenPotAttachment";
 
     }
 }
