@@ -251,5 +251,10 @@ namespace Omegasis.Revitalize.Framework.World.Objects
         {
             return false;
         }
+
+        public override void dropItem(GameLocation location, Vector2 origin, Vector2 destination)
+        {
+            WorldUtilities.WorldUtility.CreateItemDebrisAtTileLocation(location, this, origin / Game1.tileSize, destination / Game1.tileSize);
+        }
     }
 }
