@@ -1,0 +1,17 @@
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace Omegasis.Revitalize.Framework.World.Objects.Farming
+{
+    /// <summary>
+    /// Plants seeds, fertilizes, and harvests crops from irrigated watering pots that have the proper attachments!
+    /// 
+    /// </summary>
+    public class AdvancedFarmingSystem
+    {
+
+    }
+}
